--- a/public/xlibrary-test.html
+++ b/public/xlibrary-test.html
@@ -1,16 +1,1 @@
-<!DOCTYPE html><html lang=en><head><meta charset=utf-8>
-<meta http-equiv=X-UA-Compatible content="IE=edge">
-<meta name=viewport content="width=device-width,initial-scale=1">
-<link rel=icon href=/favicon.ico><title>xlibrary</title>
-<link href=./networklibrary/js/about.3ec50ec6.js rel=prefetch>
-<link href=./networklibrary/css/app.e0e83cca.css rel=preload as=style>
-<link href=./networklibrary/js/app.6ab98d39.js rel=preload as=script>
-<link href=./networklibrary/js/chunk-vendors.b2c66d80.js rel=preload as=script>
-<link href=./networklibrary/css/app.e0e83cca.css rel=stylesheet>
-</head>
-<body>
-<noscript><strong>We're sorry but xlibrary doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div>
-<script src=./networklibrary/js/chunk-vendors.b2c66d80.js></script>
-<script src=./networklibrary/js/app.6ab98d39.js></script>
-</body>
-</html>
+<!DOCTYPE html><html lang=en><head><meta charset=utf-8><meta http-equiv=X-UA-Compatible content="IE=edge"><meta name=viewport content="width=device-width,initial-scale=1"><link rel=icon href=./networklibrary/favicon.ico><title>xlibrary</title><link href=./networklibrary/js/about.3ec50ec6.js rel=prefetch><link href=./networklibrary/css/app.9a3aeac8.css rel=preload as=style><link href=./networklibrary/js/app.aab15043.js rel=preload as=script><link href=./networklibrary/js/chunk-vendors.e1146d39.js rel=preload as=script><link href=./networklibrary/css/app.9a3aeac8.css rel=stylesheet></head><body><noscript><strong>We're sorry but xlibrary doesn't work properly without JavaScript enabled. Please enable it to continue.</strong></noscript><div id=app></div><script src=./networklibrary/js/chunk-vendors.e1146d39.js></script><script src=./networklibrary/js/app.aab15043.js></script></body></html>
